force-app/main/default/objects/RelatedPlans__c/RelatedPlans__c.object-meta.xml
<CustomObject>
    <label>Related Plan</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Related Plans Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>