force-app/main/default/objects/RelatedPlans__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <label>Option</label>
    <referenceTo>Option__c</referenceTo>
    <relationshipLabel>Related Plans</relationshipLabel>
    <relationshipName>Related_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>