force-app/main/default/objects/RelatedPlans__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Related Plans</relationshipLabel>
    <relationshipName>Related_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>