force-app/main/default/objects/RelatedPlans__c/fields/ProductClass__c.field-meta.xml
<CustomField>
    <fullName>ProductClass__c</fullName>
    <formula>TEXT(Plan__r.productClasses__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Class</label>
    <type>Text</type>
</CustomField>